--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <label for="lName">Enter your Last Name</label>
       <input type="text " name="LastName" id="lName" title="hadi" /> <br />
       <p><br>
-        Enter Your Gender :
+        Enter Your Gender : <br/>
         Male <input type="range" min="0" max="100"  name="Male"> Female <input type="range" min="0" max="100" name="Female">
       </p><br>
       <label for="N">Your Nationality:</label>
